
ChangeLog
 [ + added, - removed, * changed ]
 + 26Feb2013 Initial fork+wait+waitpid instrumentation under dyninst (MFB 2.3)
 * 22Feb2013 Fixed bad instrumentation of GOMP_*_next using dyninst (MFB 2.3)
 * 20Feb2013 Added instrumentation for Intel omp_set_num_threads (which is
               named ompc_set_num_threads) (MFB 2.3)
              Added support for Intel fortran compiler with F90 code to
                instrument using dyninst (MFB 2.3)
 * 15Feb2013 Improve detection of libbfd*.so (MFB 2.3)
 * 14Feb2013 Removes all temporal files at the end of the merge process (MFB
               2.3)
             Don't require MPI to generate the MPI communicators within the
               PRV file (MFB 2.3)
             MPI statistics (burst mode) were calculated incorrectly, 1 missing
             Add variability to the sampling period
 * 13Feb2013 Removes duplicate creation of temporal files (MFB 2.3)
             Actually Fixed SendRecv communication (refixes 06Feb2013) (MFB
               2.3)
 - 11Feb2013 Support for freq_table in pair with freqtable to determine
               whether to use the posix clock routines.
             Removed auto instrumentation of libpttrace anb libtrtrace because
               pthread_mutex was issued before starting and was not hooked
               (MF-tag-2.3.2)
 * 06Feb2013 Fixed SendRecv communication matching error (MF-tag-2.3.2)
 * 01Feb2013 Removed useless lib dependencies for MN3 (MF-tag-2.3.2)
 * 25Jan2013 Fixed configure checks to link with the spectral analysis toolkit
 + 25Jan2013 Added base code for on-line support
 * 24Jan2013 Extrae version 2.3.2
 * 24Jan2013 Fixed Paraver header generation when number of threads differs
               across tasks.
             Release resources (files and memory) as soon as pthreads terminate
               (only through pthread_exit() or pthread_join())
 + 14Jan2012 Extrae version 2.3.1
 * 14Jan2013 Fixed typo in MPI_Testall wrapper for Fortran